--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "regexparser",
+  "name": "eu-law-parser",
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
@@ -9,7 +9,6 @@
   "dependencies": {
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest",
-    "axios": "^0.21.1"
+    "react-dom": "latest"
   }
 }
